--- a/src/app/function/create/create.component.html
+++ b/src/app/function/create/create.component.html
@@ -25,7 +25,7 @@
           <textarea class="output_textarea" readonly placeholder="Labels criadas..." [value]="approved"></textarea>
         </div>
         <div class="container-fluid mt-2">
-          <textarea class="output_textarea_2" readonly placeholder="Labels que já existem..." [value]="approved"></textarea>
+          <textarea class="output_textarea_2" readonly placeholder="Labels que já existem..." [value]="reproved"></textarea>
         </div>
       </div>
     </div>
