--- a/src/app/function/exchange/exchange.component.scss
+++ b/src/app/function/exchange/exchange.component.scss
@@ -10,7 +10,8 @@
   width: 100%;
   height: 95%;
   resize: none;
-  font-size: 24px;
+  font-size: 14px;
+  font-weight: 200;
   color: #FFFFFF;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 16px;
