--- a/src/app/function/label-list/label-list.component.scss
+++ b/src/app/function/label-list/label-list.component.scss
@@ -18,6 +18,24 @@
   }
 }
 
+.filter-input{
+  width: 100%;
+  height: 50%;
+  border-radius: 5px;
+  color: white;
+  padding-left: 1rem;
+  font-weight: 300;
+  font-size: 15px;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  &:focus{
+    outline: none;
+  }
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 3px;
