--- a/src/app/popups/popup/popup.component.html
+++ b/src/app/popups/popup/popup.component.html
@@ -1,3 +1,4 @@
 <div class="popup_container d-flex align-items-center justify-content-around">
   <app-delete></app-delete>
+  <app-edit></app-edit>
 </div>
