--- a/src/app/popups/delete/delete.component.scss
+++ b/src/app/popups/delete/delete.component.scss
@@ -1,5 +1,23 @@
+.title_head{
+  background-color: #1f1e21;
+  height: 3rem;
+  box-shadow: 0 2px 5px -1px rgba(1, 4, 10, 0.5);
+}
+.title_head *{
+  margin: 0;
+}
+.popup_content{
+  height: 252px;
+}
 .component_container{
-  width: 500px;
+  position: relative;
+  width: 40vw;
   height: 300px;
-  background-color: #00FFA3;
+  background-color: #373737;
+}
+.close_button{
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: scale(0.8);
 }
