--- a/src/app/popups/edit/edit.component.scss
+++ b/src/app/popups/edit/edit.component.scss
@@ -1,16 +1,20 @@
-/* Estilize o overlay que cobre a tela */
-//.cdk-overlay-pane {
-//  display: flex;
-//  justify-content: center;
-//  align-items: center;
-//  position: fixed;
-//  top: 0;
-//  left: 0;
-//  width: 100%;
-//  height: 100%;
-//}
-
-/* Estilize o conteúdo do popup */
-.dialog_container {
-
+.title_head{
+  background-color: #1f1e21;
+  height: 3rem;
+  box-shadow: 0 2px 5px -1px rgba(1, 4, 10, 0.5);
+}
+.title_head *{
+  margin: 0;
+}
+.component_container{
+  position: relative;
+  width: 40vw;
+  height: 300px;
+  background-color: #373737;
+}
+.close_button{
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform: scale(0.8);
 }
