Separando a função de abrir e fechar o popup por component

--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -34,7 +34,7 @@
               <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="editRow()">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button class="d-flex justify-content-around align-items-center">
+              <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="deleteRow()">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
