--- a/src/app/popups/edit/edit.component.html
+++ b/src/app/popups/edit/edit.component.html
@@ -7,7 +7,7 @@
         </h4>
       </div>
       <button mat-icon-button class="close_button d-flex align-items-center justify-content-around"
-              (click)="this.appComponent.openPopup()">
+              (click)="this.appComponent.closePopup()">
         <mat-icon>close</mat-icon>
       </button>
     </div>
