Separando a função de abrir e fechar o popup por component

--- a/src/app/popups/popup/popup.component.html
+++ b/src/app/popups/popup/popup.component.html
@@ -1,4 +1,4 @@
 <div class="popup_container d-flex align-items-center justify-content-around">
-  <app-delete></app-delete>
-  <app-edit></app-edit>
+  <app-delete *ngIf="selectedPopup == 'DELETE'"></app-delete>
+  <app-edit *ngIf="selectedPopup == 'EDIT'"></app-edit>
 </div>
