--- a/src/app/popups/delete/delete.component.html
+++ b/src/app/popups/delete/delete.component.html
@@ -3,7 +3,7 @@
     <div class="row title_head">
       <div class="col d-flex align-items-center justify-content-start">
         <h4>
-          Editar
+          Deletar
         </h4>
       </div>
       <button mat-icon-button class="close_button d-flex align-items-center justify-content-around"
@@ -13,7 +13,11 @@
     </div>
     <div class="row">
       <div class="col popup_content d-flex align-items-center justify-content-around">
-        teste
+        Você realmente deseja excluir essa label?
+      </div>
+      <div>
+        <button mat-raised-button color="primary">Sim</button>
+        <button mat-raised-button color="warn">Não</button>
       </div>
     </div>
   </div>
