--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -12,6 +12,7 @@
           Valor
         </div>
         <div class="col-2 d-flex text-center align-items-center justify-content-around">
+          <mat-icon>search</mat-icon>
           <input class="filter-input" placeholder="Digite o Valor da Label" [formControl]="myControl" matInput>
         </div>
       </div>
