--- a/src/app/function/label-list/label-list.component.scss
+++ b/src/app/function/label-list/label-list.component.scss
@@ -23,7 +23,8 @@
   height: 50%;
   border-radius: 5px;
   color: white;
-  padding-left: 1rem;
+  margin-left: 10px;
+  padding: 10px;
   font-weight: 300;
   font-size: 15px;
   background: rgba(255, 255, 255, 0.2);
