--- a/src/app/popups/edit/edit.component.scss
+++ b/src/app/popups/edit/edit.component.scss
@@ -18,3 +18,36 @@
   top: 0;
   transform: scale(0.8);
 }
+
+.form-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  gap: 30px;
+  .form-input{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 10px;
+    input{
+      width: 100%;
+      height: 70%;
+      border-radius: 5px;
+      color: white;
+      margin-left: 10px;
+      padding: 10px;
+      font-weight: 300;
+      font-size: 15px;
+      background: rgba(255, 255, 255, 0.2);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      &:focus{
+        outline: none;
+      }
+    }
+  }
+}
