--- a/src/app/function/label-list/label-list.component.html
+++ b/src/app/function/label-list/label-list.component.html
@@ -35,7 +35,7 @@
               <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="editRow(label)">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="deleteRow()">
+              <button mat-icon-button class="d-flex justify-content-around align-items-center" (click)="deleteRow(label)">
                 <mat-icon>delete</mat-icon>
               </button>
             </div>
