--- a/src/app/popups/delete/delete.component.html
+++ b/src/app/popups/delete/delete.component.html
@@ -12,12 +12,12 @@
       </button>
     </div>
     <div class="row">
-      <div class="col popup_content d-flex align-items-center justify-content-around">
+      <div class="col popup_content d-flex align-items-center justify-content-around flex-column">
         Você realmente deseja excluir essa label?
-      </div>
-      <div>
-        <button mat-raised-button color="primary">Sim</button>
-        <button mat-raised-button color="warn">Não</button>
+        <div>
+          <button style="margin-right: 10px" mat-raised-button (click)="deleteLabel()">Sim</button>
+          <button mat-raised-button color="accent" (click)="appComponent.closePopup()">Não</button>
+        </div>
       </div>
     </div>
   </div>
