--- a/src/app/popups/edit/edit.component.html
+++ b/src/app/popups/edit/edit.component.html
@@ -11,20 +11,34 @@
         <mat-icon>close</mat-icon>
       </button>
     </div>
-    <div class="form-content">
-      <div class="d-flex flex-column align-items-end">
-        <div class="form-input">
-          <label>Key</label>
-          <input type="text" [(ngModel)]="label.keyLabel">
+    <div class="row">
+      <div class="col">
+        <!--        KEY-->
+        <div class="row mt-2 d-flex align-items-center justify-content-around">
+          <h4 class="d-flex align-items-center justify-content-around">
+            Key
+          </h4>
         </div>
-        <div class="form-input">
-          <label>Value</label>
-          <input type="text" [(ngModel)]="label.value">
+        <div class="row d-flex align-items-center justify-content-around">
+          <input class="edit_input" type="text" [(ngModel)]="label.keyLabel">
         </div>
+        <!--        VALOR-->
+        <div class="row mt-2 d-flex align-items-center justify-content-around">
+          <h4 class="d-flex align-items-center justify-content-around">
+            Valor
+          </h4>
+          <div class="row d-flex align-items-center justify-content-around">
+            <input class="edit_input" type="text" [(ngModel)]="label.value">
+          </div>
+        </div>
+          <!--        EDITAR-->
+        <div class="row mt-3 d-flex align-items-center justify-content-around">
+          <button class="edit_button" mat-raised-button color="primary" (click)="editLabel()">
+            Editar
+          </button>
+        </div>
+
       </div>
-      <button mat-raised-button color="primary" (click)="editLabel()">
-        Editar
-      </button>
     </div>
   </div>
 </div>
