Ajuste visuais finais nos POP UPS

--- a/src/app/popups/delete/delete.component.html
+++ b/src/app/popups/delete/delete.component.html
@@ -15,8 +15,8 @@
       <div class="col popup_content d-flex align-items-center justify-content-around flex-column">
         Você realmente deseja excluir essa label?
         <div>
-          <button style="margin-right: 10px" mat-raised-button (click)="deleteLabel()">Sim</button>
-          <button mat-raised-button color="accent" (click)="appComponent.closePopup()">Não</button>
+          <button style="background-color: #d93544; margin-right: 2rem" mat-raised-button (click)="deleteLabel()">Sim</button>
+          <button style="background-color: #1f1e21;" mat-raised-button (click)="appComponent.closePopup()">Não</button>
         </div>
       </div>
     </div>
