--- a/src/app/popups/edit/edit.component.html
+++ b/src/app/popups/edit/edit.component.html
@@ -33,7 +33,7 @@
         </div>
           <!--        EDITAR-->
         <div class="row mt-3 d-flex align-items-center justify-content-around">
-          <button class="edit_button" mat-raised-button color="primary" (click)="editLabel()">
+          <button class="edit_button" mat-raised-button style="background-color: #d93544;" (click)="editLabel()">
             Editar
           </button>
         </div>
