--- a/src/app/function/about/about.component.html
+++ b/src/app/function/about/about.component.html
@@ -1,28 +1,55 @@
-<div class="mat-elevation-z8 create-container">
-  <div class="title_head">Sobre o Projeto</div>
-  <p>O <strong>Label Creator</strong> é uma ferramenta desenvolvida por Kae e Menezes, projetada para tornar a criação
-    de labels e traduções mais rápida e eficiente. Nosso objetivo é simplificar o processo de localização de projetos,
-    permitindo que você crie traduções de maneira automática e organizada.</p>
-
-  <h2>Principais recursos do Label Creator:</h2>
-  <ul>
-    <li><strong>Tradução Automática:</strong> Com o Label Creator, enviar uma palavra para tradução é simples. Basta
-      inserir a palavra em um idioma e obter instantaneamente a tradução correspondente. Essa tradução é então
-      automaticamente enviada para o banco de dados, garantindo que suas traduções estejam sempre atualizadas.
-    </li>
-    <li><strong>Tradução de HTML:</strong> Simplifique a tradução de elementos HTML em seus projetos. Envie blocos de
-      código HTML com palavras a serem traduzidas, e o Label Creator substituirá essas palavras pelo equivalente
-      traduzido, mantendo a estrutura do seu HTML intacta.
-    </li>
-    <li><strong>Geração de Comandos SQL:</strong> O Label Creator oferece a conveniência de gerar comandos SQL para
-      facilitar a comparação entre o banco de dados de desenvolvimento e o banco de dados de produção. Isso permite que
-      você identifique rapidamente quais labels estão ausentes no banco de desenvolvimento e as adicione conforme
-      necessário.
-    </li>
-  </ul>
-
-  <p>O <strong>Label Creator</strong> é uma ferramenta poderosa para equipes de desenvolvimento e localização, ajudando
-    a agilizar a criação e gerenciamento de labels e traduções. Simplifique seu fluxo de trabalho e mantenha suas
-    traduções organizadas e atualizadas com o Label Creator.</p>
-
+<div class="list-container mat-elevation-z8">
+  <div class="container-fluid">
+    <div class="col">
+      <div class="row table_header">
+        <h1 class="d-flex align-items-center justify-content-around">Sobre o Projeto</h1>
+      </div>
+      <!--      -----------------------------------------TEXTO--------------------------------------------------->
+      <div class="row table_content">
+        <p class="mt-3">
+          &nbsp;O <strong>Label Creator</strong> é uma ferramenta poderosa para equipes de desenvolvimento, ajudando
+          a agilizar a criação e gerenciamento de labels e traduções. Simplifique seu fluxo de trabalho e mantenha suas
+          traduções organizadas e atualizadas com o Label Creator.
+        </p>
+        <!--        PRINCIPAIS RECURSOS-->
+        <hr>
+        <h2>Principais Recursos do Label Creator :</h2>
+        <ul class="mt-3">
+          <li>
+            &nbsp;<strong>Tradução Automática :</strong> Com o Label Creator, enviar uma palavra para tradução é
+            simples.
+            Basta inserir a palavra em um idioma e obter instantaneamente a tradução correspondente. Essa tradução é
+            automaticamente enviada para o banco de dados, garantindo que suas traduções estejam sempre atualizadas.
+          </li>
+          <br>
+          <li>
+            &nbsp;<strong>Tradução de HTML :</strong> Simplifique a tradução de elementos HTML em seus projetos. Envie
+            blocos
+            de código HTML com palavras a serem traduzidas, e o Label Creator substituirá essas palavras pelo
+            equivalente
+            traduzido, mantendo a estrutura do seu HTML intacta.
+          </li>
+          <br>
+          <li>
+            &nbsp;<strong>Geração de Comandos SQL :</strong> O Label Creator oferece a conveniência de gerar comandos
+            SQL para
+            facilitar a comparação entre o banco de dados em desenvolvimento e o banco de dados de produção. Isso
+            permite
+            que você identifique rapidamente quais labels estão ausentes no banco de desenvolvimento e as adicione
+            conforme
+            necessário.
+          </li>
+        </ul>
+        <!--        PRINCIPAIS RECURSOS-->
+        <hr>
+        <h2>Equipe :</h2>
+        <ul class="mt-3">
+          <li>
+            &nbsp;O Label Crator é uma ferramenta desenvolvida por Kae Lucas e Nathan Menezes, durantes o programa de estágio
+            da Omotor.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
